# python-stock-analysis

./: README.md  returns.xlsx  sp500.csv  sp_ratio.xlsx
part_01/: macro_functions.py
part_02/: macro_functions.py
part_03/: macro_functions.py
part_04/: macro_functions.py
part_05/: macro_functions.py
part_08/: macro_functions.py
part_1/: macro_functions.py
part_10/: micro_functions.py
part_11/: macro_functions.py  micro_functions.py
part_12/: micro_functions.py
part_13/: micro_functions.py
part_14/analyze/: README.md  setup.cfg
part_2/: macro_functions.py
part_3/: macro_functions.py
part_4/: macro_functions.py
part_5/: macro_functions.py
part_6/: macro_functions.py
part_7/: macro_functions.py
part_8/: macro_functions.py
part_9/: macro_functions.py
